# Synt

backend/: LICENSE  README.md  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/endpoints/: api.py  crypto.py  health_check.py
backend/app/integration/: api_helper.py  api_integration.py  rabbitmq.py  rabbitmq_conf.py  redis.py
backend/app/utils/: utils.py
backend/app/worker/: manager.py
backend/rabbitmq/: .erlang.cookie
backend/rabbitmq/mnesia/rabbit@12e6f00fd533/: cluster_nodes.config  nodes_running_at_shutdown
backend/rabbitmq/mnesia/rabbit@1c96119e3752/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
backend/rabbitmq/mnesia/rabbit@1e09d328453a/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
backend/rabbitmq/mnesia/rabbit@21244920010a/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
backend/rabbitmq/mnesia/rabbit@24718fecfeae/: cluster_nodes.config  nodes_running_at_shutdown
backend/redis/: dump.rdb  temp-1.rdb
backend/tests/: conftest.py
backend/tests/endpoints/: test_api.py  test_crypto.py
backend/tests/integration/: test_cache.py  test_queue.py
backend/tests/utils/: test_utils.py
backend/tests/worker/: test_manager.py
(+238 files in other folders)
